# makeanything

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  architecture.md  makeanything.md  poc-notes.md  proposal.md  pyproject.toml
.claude/commands/: lint.md  run-tests.md  summarize-sample.md
loglens/: __main__.py  cli.py  formatter.py  mcp_server.py  parser.py  rag.py  summarizer.py
specs/: cli.md  formatter.md  mcp_server.md  parser.md  summarizer.md
tests/: test_cli.py  test_formatter.py  test_mcp_server.py  test_parser.py  test_summarizer.py
